<resources>
    <string name="app_name">Workshop Android</string>

    <string name="menu_item1">Information</string>
    <string name="menu_item2">Toast</string>

    <string name="options_menu_message">Hello world from the options menu!</string>

    <string name="alert_dialog_main_activity_ok">Ok</string>
    <string name="alert_dialog_main_activity_cancel">Cancel</string>

    <string name="radio_button1_main_activity">First RB</string>
    <string name="radio_button2_main_activity">Second RB</string>
    <string name="radio_button3_main_activity">Third RB</string>

    <string name="checkbox1_main_activity">First CB</string>
    <string name="checkbox2_main_activity">Second CB</string>
    
    <string name="button_main_activity">Save</string>
    
    <string name="snackbar_message">Hello world from a Snackbar!</string>

    <string name="drawer_header">Hello world from drawer\'s header!</string>
    <string name="drawer_header_image_description">This is a description of an image</string>

    <string name="drawer_item1">Start Descendant 1</string>
    <string name="drawer_item2">Start Descendant 2</string>
    <string name="drawer_group2">External Activities</string>
    <string name="drawer_item3">Start Google Maps</string>

    <string name="drawer_toggle_open">Open</string>
    <string name="drawer_toggle_close">Close</string>

    <string name="gps">geo:44.435065,26.047774</string>
    <string name="google_maps">com.google.android.apps.maps</string>

    <string name="button_first_descendant_activity1">Go To Sibling Activity</string>
    <string name="button_first_descendant_activity2">I Do Nothing</string>

    <string name="image_view_description_second_descendant_activity">This is a description of an image</string>

    <string name="toast_message">Click!</string>

    <string-array name="recycler_view_items_second_descendant_activity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>